# server/common/api.yml
@@ -556,17 +556,12 @@ paths:
         404:
           $ref: '#/responses/NotFound'
   
-  /users/{id}/password:
+  /users/password:
     patch:
       tags:
         - Users
       description: change password
       parameters:
-        - in: path
-          name: id
-          type: string
-          required: true
-          description: userId
         - in: header
           name: authorization
           required: true 
@@ -577,7 +572,9 @@ paths:
           schema:
             type: object
             properties:
-              password:
+              oldPassword:
+                type: string
+              newPassword:
                 type: string
           description: the avatar to upload
       responses:
@@ -588,56 +585,6 @@ paths:
         404:
           $ref: '#/responses/NotFound'
   
-  # /users/{id}/tutor-data:
-  #   get:
-  #     tags:
-  #       - Tutor data
-  #     description: fetch tutor data
-  #     parameters:
-  #       - in: path
-  #         name: id
-  #         type: string
-  #         description: tutorId
-  #         required: true 
-  #       - in: header
-  #         name: authorization
-  #         required: true 
-  #         type: string
-  #         description: Bearer <token>'
-  #     responses:
-  #       200:
-  #         description: OK
-  #       401:
-  #         $ref: '#/responses/Unauthorized'
-  #       404:
-  #         $ref: '#/responses/NotFound'
-    
-    # put:
-    #   tags:
-    #     - Tutor data
-    #   description: update tutor data
-    #   parameters:
-    #     - in: path
-    #       name: id
-    #       type: string
-    #       description: tutorId
-    #       required: true
-    #     - in: header
-    #       name: authorization
-    #       required: true 
-    #       type: string
-    #       description: Bearer <token>'
-    #     - in: body
-    #       name: tutorData
-    #       schema:
-    #         $ref: '#/definitions/TutorDataBody'
-    #   responses:
-    #     200:
-    #       description: OK
-    #     401:
-    #       $ref: '#/responses/Unauthorized'
-    #     404:
-    #       $ref: '#/responses/NotFound'
 
   /users/{id}/tutor-intro:
     patch:
